Fix overflow

--- a/Lab5/src/app/components/dish/dish-detail/dish-detail.component.scss
+++ b/Lab5/src/app/components/dish/dish-detail/dish-detail.component.scss
@@ -78,3 +78,8 @@
   display: flex;
   height: 100%;
 }
+
+.preparation-text {
+  width: 800px;
+  overflow: scroll;
+}
